# ZEITGEISTROUNDS

./: .gitignore  Anchor.toml  Cargo.toml  README.md
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/idl/: zeitgeist.json
backend/keypairs/: payer.json
backend/src/: index.ts  test-runner.ts
backend/src/blockchain/: pdas.ts  program.ts
backend/src/cache/: redis.ts
backend/src/config/: index.ts  solana.config.ts
backend/src/controllers/: admin.controller.ts  claims.controller.ts  predictions.controller.ts  rounds.controller.ts  users.controller.ts
backend/src/db/: client.ts  migrate.ts  schema.sql
backend/src/indexer/: README.md  handler.ts  index.ts  listener.ts  parser.ts
backend/src/jobs/: README.md  bettingCloser.job.ts  cleanup.job.ts  index.ts  priceMonitor.job.ts  roundCreator.job.ts  settlement.job.ts
backend/src/middleware/: auth.ts  rateLimit.ts  validation.ts
backend/src/repositories/: base.repository.ts  event.repository.ts  index.ts  prediction.repository.ts  round.repository.ts  user.repository.ts
backend/src/routes/: admin.routes.ts  claims.routes.ts  index.ts  predictions.routes.ts  rounds.routes.ts  users.routes.ts
backend/src/scripts/: create-test-round.ts  full-game-cycle.ts  place-test-prediction.ts
backend/src/services/: admin.service.ts  claims.service.ts  initialize.service.ts  nft.service.ts  nft.service.txt  oracle.service.ts  prediction.service.ts  refund.service.ts  round.service.ts  settlement.service.ts
backend/src/startup/: index.ts
backend/src/utils/: airdrop.ts  keypair-generator.ts  logger.ts
backend/src/websocket/: README.md  events.ts  index.ts  server.ts
frontend/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
frontend/components/: ActivityFeed.tsx  Header.tsx  Leaderboard.tsx  LiveRound.tsx  Moments.tsx  Tournaments.tsx
program/: Cargo.toml
program/src/: claim_winnings.rs  constants.rs  create_round.rs  create_tournament.rs  emergency_cancel.rs  errors.rs  events.rs  initialize.rs  lib.rs  place_prediction.rs  settle_round.rs
program/src/contexts/: claim_winnings.rs  close_betting.rs  create_round.rs  mod.rs  pause_program.rs  refund_prediction.rs  settle_round.rs  unpause_program.rs
program/src/instructions/: claim_winnings.rs  close_betting.rs  create_round.rs  create_tournament.rs  initialize.rs  mod.rs  place_prediction.rs  refund_prediction.rs  settle_round.rs
program/src/state/: global_state.rs  mod.rs  round.rs
programs/zeitgeist/: Cargo.toml
programs/zeitgeist/src/: constants.rs  errors.rs  lib.rs  utils.rs
programs/zeitgeist/src/contexts/: claim_winnings.rs  create_round.rs  create_tournament.rs  initialize.rs  mint_moment_card.rs  mod.rs  place_prediction.rs  settle_round.rs
programs/zeitgeist/src/instructions/: claim_winnings.rs  create_round.rs  emergency_cancel.rs  mint_moment_card.rs  mod.rs  pause_program.rs  place_prediction.rs  refund_prediction.rs  settle_round.rs  unpause_program.rs
programs/zeitgeist/src/oracle/: mod.rs  onchain.rs  pyth.rs  switchboard.rs
programs/zeitgeist/src/state/: global_state.rs  prediction.rs  round.rs  tournament.rs  user_stats.rs
