[workspace]
members = [
     "programs/zeitgeist",
]
resolver = "2"

[workspace.dependencies]
proc-macro2 = "=1.0.81"
indexmap = "=2.11.4"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

#[patch.crates-io]
#curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "main" }
# ADD THIS to force zeroize compatibility:

