[workspace]
members = [
     "programs/zeitgeist",
]
resolver = "2"


[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

#[patch.crates-io]
#curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "main" }
# ADD THIS to force zeroize compatibility:

