[workspace]
members = [
     "programs/zeitgeist",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = true
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Remove all commented patches - they can cause conflicts
# Only add patches if you have specific version conflicts to resolve