[package]
name = "zeitgeist"
version = "0.1.0"
description = "Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeitgeist"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
pyth-sdk-solana = "0.10.1" 
switchboard-v2 = "0.4.0"   
mpl-bubblegum = "1.4.0"       
spl-account-compression = "0.3.0"  

